Probability % added to prediction class name

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
             <h1>What's the food on your plate?</h1>
-            <p>Upload your image and click submit to find out...</p>
+            <p>Upload your image...</p>
             <form action = "{{ url_for('upload_img') }}" method="POST" enctype="multipart/form-data">
 
               <div class="form-group">
