--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -9,19 +9,18 @@
     </head>
     <body>
         <div class="container">
-            <h1>What's the food on your plate?</h1>
-            <p>Upload your image...</p>
+            <h2>What are you eating?</h2>
+            <h1>Food images recognition using Deep Learning</h1>
             <form action = "{{ url_for('upload_img') }}" method="POST" enctype="multipart/form-data">
-
               <div class="form-group">
-                  <label>Select image </label>
+                  <label>Upload your image...</label>
                   <div class="custom-file">
                     <input type="file" align="center" name="img" id="img">
 
                   </div>
              </div>
-
-              <button type="submit" class="btn btn-primary">Upload</button>
+              <button type="submit" class="btn btn-primary">Predict</button>
+              <button type="reset" class="btn btn-warning" color="red">Reset</button>
             </form>
 
         </div>
